# financial-timeseries-dashboard

./: .gitignore  README.md  docker-compose.yml  exclude.txt
backend/: Dockerfile  README.md  myschedule.py  pyproject.toml  supervisord.conf
backend/app/: backend.py  run_cron.py  swagger.yml
backend/app/config/: gunicorn_config.py  supervisord.conf
backend/app/subs/: getData.py  getPlots.py  getTickers.py  session.py
backend/app/tasks/: dual_task.py  task_getData.py  task_getTickers.py  task_plot.py
backend/app/tier1/: selection_plot.py  tickerlist.py
backend/kedro-backend/: app.py  myschedule.py  pyproject.toml
backend/kedro-backend/conf/: api.yml
backend/kedro-backend/conf/base/: catalog.yml  globals.yml  logging.yml  parameters.yml
backend/kedro-backend/conf/base/api_pipeline/: catalog.yml
backend/kedro-backend/conf/base/parameters/: getPrepared.yml
backend/kedro-backend/conf/local/: mlflow.yml
backend/kedro-backend/docs/source/: conf.py  index.rst
backend/kedro-backend/mlruns/0/: meta.yaml
backend/kedro-backend/mlruns/1/: meta.yaml
backend/kedro-backend/mlruns/1/0b9dac203e914049ae5be632b9d5e80c/: meta.yaml
backend/kedro-backend/mlruns/1/0b9dac203e914049ae5be632b9d5e80c/tags/: runner  session_id
backend/kedro-backend/mlruns/1/22cc651608164ac0a1cea9fd14859493/: meta.yaml
backend/kedro-backend/mlruns/1/22cc651608164ac0a1cea9fd14859493/tags/: mlflow.source.name  project_path  runner  session_id
backend/kedro-backend/mlruns/1/63a612c33a71417ca97be5ce80ba3354/: meta.yaml
backend/kedro-backend/mlruns/1/63a612c33a71417ca97be5ce80ba3354/tags/: pipeline_name  runner  session_id
backend/kedro-backend/mlruns/1/8c1e5d97e7064264a04e492b64cea919/: meta.yaml
backend/kedro-backend/mlruns/1/8c1e5d97e7064264a04e492b64cea919/tags/: kedro_command  runner  (+1 more)
backend/kedro-backend/src/: setup.py
backend/kedro-backend/src/backend/: __init__.py  __main__.py  settings.py
backend/kedro-backend/src/tests/: test_run.py
backend/requirements/: .in  .txt
frontend/: Dockerfile  pyproject.toml  supervisord.conf
frontend/app/: APP_wrap.py  app.py
frontend/app/subs/: access_backend.py  orderdict.py
frontend/app/toml/: config.prod.toml
frontend/requirements/: .in
(+8 files in other folders)
