[tool.poetry]
name = "mykedro-fast-api-etc"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
black = "^22.12.0"
environs = "^9.5.0"
flake8 = "^6.0.0"
ipython = "^8.8.0"
isort = "^5.11.4"
kedro = "^0.18.4"
kedro-fast-api = "^0.6.0"
kedro-viz = "^5.2.0"
lxml = "^4.9.2"
nbstripout = "^0.6.1"
numpy = "^1.24.1"
pandas = "^1.5.3"
pandas-datareader = "^0.10.0"
wheel = "^0.38.4"
yfinance = "^0.2.12"
schedule = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
