[tool.poetry]
name = "mykedro-fast-api-etc"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
black = "^22.12.0"
flake8 = "^6.0.0"
ipython = "^8.8.0"
isort = "^5.11.4"
jupyter = "^1.0.0"
jupyter-client = "^7.4.9"
jupyterlab = "^3.5.3"
kedro = "^0.18.4"
nbstripout = "^0.6.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest = "^7.2.1"
wheel = "^0.38.4"
numpy = "^1.24.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
matplotlib = "^3.6.3"
kedro-viz = "^5.2.0"
yapf = "^0.32.0"
kedro-fast-api = "^0.6.0"
kedro-mlflow = "^0.11.6"
lxml = "^4.9.2"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.12"
environs = "^9.5.0"
streamlit = "^1.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
