[tool.poetry]
name = "mykedro-fast-api-etc"
version = "0.1.0"
description = ""
authors = ["H. Felix Wittmann <hfwittmann@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
black = "^22.12.0"
flake8 = "^6.0.0"
ipython = "^8.8.0"
nbstripout = "^0.6.1"
wheel = "^0.38.4"
numpy = "^1.24.1"
pandas = "^1.5.3"
lxml = "^4.9.2"
pandas-datareader = "^0.10.0"
environs = "^9.5.0"
streamlit = "^1.20.0"
plotly = "^5.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
